syntax = "proto3";

option csharp_namespace = "AElf.Kernel";

import "google/protobuf/timestamp.proto";


// ======== todo remove types below

message Transaction {
    Address From = 1;
    Address To = 2;
    uint64 RefBlockNumber = 3;
    bytes RefBlockPrefix = 4;
    uint64 IncrementId = 5;
    string MethodName = 6;
    bytes Params = 7;
    uint64 Fee = 8;
    repeated bytes Sigs = 9;
    TransactionType Type = 10;
    google.protobuf.Timestamp Time = 11;
}

message Address
{
    bytes Value = 1;
}

enum TransactionType {
    ContractTransaction = 0;
    DposTransaction = 1;
    MsigTransaction = 2;
    ContractDeployTransaction=3;
}